--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,15 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+*.png
+NUMA-aware-locks-venv/
+results/
+run_jupyter.sh
+scripts/
+.idea/
+.gradle/
+bin/
+build/
+gradlew.bat
+lib/
+pyvenv.cfg
