add jmh to benchmarks, split modes into jmh benchmarks/custom benchmarks

--- a/settings/settings.json
+++ b/settings/settings.json
@@ -12,6 +12,7 @@
   "actionsCount" : 10000,
   "warmupIterations": 0,
   "iterations": 1,
+  "type": "jmh",
   "benches": [
     {
       "name": "matrix",
