decrease_cna_lock_cas_updates_and_add_fair_and_unfair_reentrant

--- a/settings/settings.json
+++ b/settings/settings.json
@@ -1,6 +1,7 @@
 {
   "locks": [
-    "REENTRANT",
+    "FAIR_REENTRANT",
+    "UNFAIR_REENTRANT",
     "MCS",
     "TEST_SET",
     "TEST_TEST_SET",
