--- a/settings/settings.json
+++ b/settings/settings.json
@@ -10,9 +10,6 @@
       "name": "MCS"
     },
     {
-      "name": "TICKET"
-    },
-    {
       "name": "CLH"
     },
     {
@@ -22,13 +19,10 @@
       "name": "CNA"
     },
     {
-      "name": "TEST_TEST_SET"
-    },
-    {
-      "name": "TEST_SET"
-    },
-    {
-      "name": "HMCS"
+      "name": "HMCS",
+      "spec": {
+        "ccl": 1
+      }
     },
     {
       "name": "HCLH_CCL_SPLIT"
