--- a/settings/settings.json
+++ b/settings/settings.json
@@ -1,39 +1,66 @@
 {
   "locks": [
     {
-      "name": "FAIR_REENTRANT"
+      "name": "UNFAIR_REENTRANT"
     },
     {
-      "name": "UNFAIR_REENTRANT"
+      "name": "FAIR_REENTRANT"
     },
     {
       "name": "MCS"
     },
     {
-      "name": "CLH"
+      "name": "TEST_SET"
+    },
+    {
+      "name": "TEST_TEST_SET"
+    },
+    {
+      "name": "TICKET"
     },
     {
       "name": "HCLH"
     },
     {
-      "name": "CNA"
+      "name": "CLH"
     },
     {
-      "name": "HMCS",
-      "spec": {
-        "ccl": 4
-      }
+      "name": "CNA"
     },
     {
       "name": "HCLH_CCL_SPLIT"
     },
     {
       "name": "MCS_NO_PARK"
+    },
+    {
+      "name": "HMCS"
+    },
+    {
+      "name": "HCLH_CCL_SPLIT_BACKOFF"
+    },
+    {
+      "name": "HMCS_PARK"
+    },
+    {
+      "name": "HMCS_PARK_V2"
+    },
+    {
+      "name": "HMCS_PARK_V3"
+    },
+    {
+      "name": "HMCS_PARK_V4"
+    },
+    {
+      "name": "HMCS_PARK_V5"
+    },
+    {
+      "name": "HMCS_PARK_V6"
     }
   ],
-  "actionsCount" : 8192,
-  "warmupIterations": 1,
-  "iterations": 2,
+  "actionsCount": 12288,
+  "warmupIterations": 0,
+  "iterations": 1,
   "type": "jmh",
   "benches": [
     {
