--- a/settings/settings.json
+++ b/settings/settings.json
@@ -1,17 +1,50 @@
 {
   "locks": [
     {
+      "name": "UNFAIR_REENTRANT"
+    },
+    {
+      "name": "FAIR_REENTRANT"
+    },
+    {
       "name": "HMCS_ONLY_NUMA_HIERARCHY"
+    },
+    {
+      "name": "HMCS_CCL_PLUS_NUMA_HIERARCHY"
+    },
+    {
+      "name": "HMCS_CCL_PLUS_NUMA_HIERARCHY_WITH_PADDING"
+    },
+    {
+      "name": "HMCS_CCL_PLUS_NUMA_PLUS_SUPERNUMA_HIERARCHY"
+    },
+    {
+      "name": "HMCS_CCL_PLUS_NUMA_PLUS_SUPERNUMA_HIERARCHY_WITH_PADDING"
+    },
+    {
+      "name": "HMCS_ONLY_CCL_HIERARCHY"
+    },
+    {
+      "name": "HMCS_ONLY_CCL_HIERARCHY_WITH_PADDING"
+    },
+    {
+      "name": "HMCS_ONLY_NUMA_HIERARCHY"
+    },
+    {
+      "name": "HMCS_ONLY_NUMA_HIERARCHY_WITH_PADDING"
     }
   ],
-  "threads": [
-    96
-  ],
   "actionsCount": 12288,
-  "warmupIterations": 0,
+  "warmupIterations": 1,
   "iterations": 1,
   "type": "jmh",
   "benches": [
+    {
+      "name": "consumeCpu",
+      "before": 0,
+      "in": 40,
+      "light": false
+    },
     {
       "name": "consumeCpu",
       "before": 0,
