--- a/settings/settings.json
+++ b/settings/settings.json
@@ -7,32 +7,17 @@
       "name": "FAIR_REENTRANT"
     },
     {
-      "name": "HMCS_ONLY_NUMA_HIERARCHY"
-    },
-    {
-      "name": "HMCS_CCL_PLUS_NUMA_HIERARCHY"
-    },
-    {
-      "name": "HMCS_CCL_PLUS_NUMA_HIERARCHY_WITH_PADDING"
-    },
-    {
-      "name": "HMCS_CCL_PLUS_NUMA_PLUS_SUPERNUMA_HIERARCHY"
-    },
-    {
-      "name": "HMCS_CCL_PLUS_NUMA_PLUS_SUPERNUMA_HIERARCHY_WITH_PADDING"
-    },
-    {
-      "name": "HMCS_ONLY_CCL_HIERARCHY"
-    },
-    {
-      "name": "HMCS_ONLY_CCL_HIERARCHY_WITH_PADDING"
-    },
-    {
-      "name": "HMCS_ONLY_NUMA_HIERARCHY"
-    },
-    {
-      "name": "HMCS_ONLY_NUMA_HIERARCHY_WITH_PADDING"
+      "name": "MCS"
     }
+  ],
+  "threads": [
+    1,
+    2,
+    8,
+    16,
+    32,
+    48,
+    64
   ],
   "actionsCount": 12288,
   "warmupIterations": 1,
@@ -43,13 +28,13 @@
       "name": "consumeCpu",
       "before": 0,
       "in": 40,
-      "light": false
+      "light": true
     },
     {
       "name": "consumeCpu",
       "before": 0,
       "in": 80,
-      "light": false
+      "light": true
     }
   ]
 }
