--- a/settings/settings.json
+++ b/settings/settings.json
@@ -1,6 +1,9 @@
 {
   "locks": [
     {
+      "name": "TEST_TEST_SET"
+    },
+    {
       "name": "UNFAIR_REENTRANT"
     },
     {
@@ -13,43 +16,33 @@
       "name": "HMCS_CCL_PLUS_NUMA_HIERARCHY"
     },
     {
-      "name": "HMCS_CCL_PLUS_NUMA_HIERARCHY_WITH_PADDING"
-    },
-    {
-      "name": "HMCS_CCL_PLUS_NUMA_PLUS_SUPERNUMA_HIERARCHY"
-    },
-    {
-      "name": "HMCS_CCL_PLUS_NUMA_PLUS_SUPERNUMA_HIERARCHY_WITH_PADDING"
-    },
-    {
       "name": "HMCS_ONLY_CCL_HIERARCHY"
-    },
-    {
-      "name": "HMCS_ONLY_CCL_HIERARCHY_WITH_PADDING"
-    },
-    {
-      "name": "HMCS_ONLY_NUMA_HIERARCHY"
-    },
-    {
-      "name": "HMCS_ONLY_NUMA_HIERARCHY_WITH_PADDING"
     }
   ],
   "actionsCount": 12288,
-  "warmupIterations": 1,
-  "iterations": 1,
+  "warmupIterations": 2,
+  "iterations": 2,
   "type": "jmh",
+  "threads": [
+    8,
+    16,
+    24,
+    32,
+    48,
+    96
+  ],
   "benches": [
     {
       "name": "consumeCpu",
       "before": 0,
-      "in": 40,
-      "light": false
+      "in": 80,
+      "light": true
     },
     {
       "name": "consumeCpu",
       "before": 0,
-      "in": 80,
-      "light": false
+      "in": 500,
+      "light": true
     }
   ]
 }
