--- a/settings/settings.json
+++ b/settings/settings.json
@@ -1,83 +1,73 @@
 {
   "locks": [
     {
-      "name": "MCS"
-    },
-    {
-      "name": "TEST_SET"
-    },
-    {
-      "name": "TEST_TEST_SET"
-    },
-    {
-      "name": "TICKET"
-    },
-    {
-      "name": "CLH"
-    },
-    {
       "name": "FAIR_REENTRANT"
     },
     {
       "name": "UNFAIR_REENTRANT"
     },
     {
-      "name": "CNA_NUMA_NO_PAD"
+      "name": "CNA_NUMA"
     },
     {
-      "name": "CNA_CCL_NO_PAD"
+      "name": "CNA_CCL"
     },
     {
-      "name": "HCLH_NUMA"
+      "name": "CNA_CCL_PAD"
+    },
+    {
+      "name": "CNA_NUMA_PAD"
     },
     {
       "name": "HCLH_CCL"
     },
     {
-      "name": "HMCS_CCL_PLUS_NUMA"
+      "name": "HCLH_NUMA"
     },
     {
-      "name": "HMCS_ONLY_CCL"
+      "name": "HCLH_CCL_PAD"
     },
     {
-      "name": "HMCS_ONLY_NUMA"
+      "name": "HCLH_NUMA_PAD"
+    },
+    {
+      "name": "HMCS_CCL_NUMA"
+    },
+    {
+      "name": "HMCS_CCL_NUMA_PAD"
+    },
+    {
+      "name": "HMCS_CCL"
+    },
+    {
+      "name": "HMCS_CCL_PAD"
+    },
+    {
+      "name": "HMCS_NUMA"
+    },
+    {
+      "name": "HMCS_NUMA_PAD"
     }
   ],
-  "actionsCount": 36864,
+  "actionsCount": 110592,
   "warmupIterations": 0,
   "iterations": 3,
   "type": "jmh",
   "threads": [
-    1,
-    2,
-    4,
-    8,
-    16,
-    24,
-    32,
-    48
+    48,
+    72,
+    96,
+    120,
+    128,
+    136
   ],
   "benches": [
     {
       "name": "consumeCpu",
       "before": 0,
-      "in": 500,
-      "light": true,
-      "skip": true
-    },
-    {
-      "name": "consumeCpu",
-      "before": 0,
-      "in": 1500,
+      "in": 3000,
       "light": true,
       "skip": false
-    },
-    {
-      "name": "consumeCpu",
-      "before": 0,
-      "in": 5000,
-      "light": true,
-      "skip": true
     }
   ]
 }
