--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,10 @@ gradlew.bat
 lib/
 pyvenv.cfg
 fatjar/light/result.pdf
+.DS_Store
+.ipynb_checkpoints/
+fatjar/
+results/result.pdf
+venv/
+results/empty
+Untitled.ipynb
