--- a/settings/settings.json
+++ b/settings/settings.json
@@ -59,6 +59,18 @@
     {
       "name": "COMB_CNA_CCL_MCS_NUMA",
       "skip": false
+    },
+    {
+      "name": "COMB_TTAS_CCL_HCLH_NUMA",
+      "skip": false
+    },
+    {
+      "name": "COMB_TTAS_CCL_CNA_NUMA",
+      "skip": false
+    },
+    {
+      "name": "COMB_TTAS_NUMA_MCS",
+      "skip": false
     }
   ],
   "benches": [
@@ -67,25 +79,11 @@
       "actionsCount": 147456,
       "before": 0,
       "in": 1000,
-      "warmupIterations": 6,
-      "measurementIterations": 6,
+      "warmupIterations": 5,
+      "measurementIterations": 5,
       "forks": 3,
-      "threads": [
-        1,
-        2,
-        4,
-        8,
-        16,
-        24,
-        32,
-        48,
-        64,
-        96,
-        128,
-        144,
-        160,
-        176
-      ],
+      "limitVirtualScheduler" : true,
+      "pinUsingJna": true,
       "light": true,
       "skip": false
     },
@@ -94,27 +92,13 @@
       "before": 18000,
       "in": 100,
       "actionsCount": 36864,
-      "warmupIterations": 6,
-      "measurementIterations": 6,
+      "warmupIterations": 5,
+      "measurementIterations": 5,
+      "limitVirtualScheduler" : true,
+      "pinUsingJna": true,
       "forks": 3,
-      "threads": [
-        1,
-        2,
-        4,
-        8,
-        16,
-        24,
-        32,
-        48,
-        64,
-        96,
-        128,
-        144,
-        160,
-        176
-      ],
       "light": true,
-      "skip": true
+      "skip": false
     }
   ]
 }
